# challenge-crud-python

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_users.py  test.db
alembic/: env.py
alembic/versions/: 87ff5635e0a3_add_created_at_and_updated_at_to_users.py  fbfb234e3c31_create_users_table.py
app/: main.py
app/api/v1/routes/: health.py  user.py
app/api/v1/schemas/: user.py
app/core/: config.py  redis.py
app/db/: session.py
app/models/: user.py
tests/: conftest.py
tests/api/v1/: test_users.py
